# libjg

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Doxygen.cmake  StandardSettings.cmake
include/: jg.h
